fix(ui): corrected hairline misalignment of icon buttons in reader window (PR #764 Fixes #741)

--- a/src/renderer/assets/styles/reader-app.css
+++ b/src/renderer/assets/styles/reader-app.css
@@ -284,6 +284,7 @@ button {
 
     & ul.menu_option {
       float: right;
+      display: flex;
 
       & > li {
         border-left: 1px solid #c1c1c1;
